force-app/main/default/objects/ErrorDetail__c/ErrorDetail__c.object-meta.xml
<CustomObject>
    <description>The field level information on a record errors, including all of the fields that we were trying to update/insert</description>
    <label>Error Detail</label>
    <nameField>
        <displayFormat>Error-{00000000}</displayFormat>
        <label>Error Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>