force-app/main/default/objects/ErrorDetail__c/fields/ErrorLog__c.field-meta.xml
<CustomField>
    <fullName>ErrorLog__c</fullName>
    <label>Error Log</label>
    <referenceTo>ErrorLog__c</referenceTo>
    <relationshipLabel>Error Details</relationshipLabel>
    <relationshipName>Error_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>