force-app/main/default/objects/ErrorDetail__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The initial error message that occurred for this record</inlineHelpText>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>