force-app/main/default/objects/ErrorDetail__c/fields/FailureReason__c.field-meta.xml
<CustomField>
    <fullName>FailureReason__c</fullName>
    <inlineHelpText>If this is moved to failure, what is the reason?</inlineHelpText>
    <label>Failure Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outside Time Frame</fullName>
            </value>
            <value>
                <fullName>Error Continued</fullName>
            </value>
            <value>
                <fullName>Record Modified After Initial Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>